--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,7 @@
 /**************
+    VARIABLES
+**************/
+/**************
     GENERAL
 **************/
 * {
@@ -9,7 +12,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
 
