--- a/style/style.css
+++ b/style/style.css
@@ -14,11 +14,178 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
+  color: #6e728e;
+  background-image: url(../images/bg-top.svg), url(../images/bg-bottom.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: top right, bottom left;
+  background-color: #f7f7fe;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 100vw;
+  min-height: 100vh;
+  padding: 64px 24px 24px 24px;
+}
+
+/**************
+    HEADER
+**************/
+header h1 {
+  font-size: 32px;
+  line-height: 39px;
+  margin-bottom: 40px;
+}
+
+header .switch {
+  line-height: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 80px;
 }
 
 /**************
     MAIN
 **************/
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 24px;
+}
+
+main .card {
+  background-color: #fff;
+  border-radius: 10px;
+  margin-bottom: 32px;
+  width: 327px;
+  height: 453px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 30px;
+  -webkit-box-shadow: 1px 1px 10px #d0d5f6;
+          box-shadow: 1px 1px 10px #d0d5f6;
+}
+
+main .card h2 {
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 30px;
+}
+
+main .card p {
+  border-bottom: 1px solid #d0d5f6;
+  width: 100%;
+  text-align: center;
+  padding: 14px 0;
+}
+
+main .card button {
+  margin-top: 30px;
+  padding: 15px;
+  width: 100%;
+  border: 1px solid #fff;
+  text-align: center;
+  text-transform: uppercase;
+  background: -webkit-gradient(linear, left top, left bottom, from(#a3a8f0), to(#696fdd));
+  background: linear-gradient(#a3a8f0, #696fdd);
+  color: #fff;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: 1.39px;
+  font-weight: 700;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+main .card button:hover {
+  background: none;
+  color: #6D72DE;
+  border-color: #6D72DE;
+}
+
+main .card .cost::before {
+  font-size: 40px;
+  content: "$";
+  position: relative;
+  top: -7px;
+  margin-right: 7px;
+}
+
+main .card .cost {
+  color: #4a4d60;
+  font-size: 72px;
+  line-height: 71px;
+  letter-spacing: -2.16px;
+  padding-bottom: 35px;
+  padding-top: 0;
+}
+
+main #card-2 {
+  background: -webkit-gradient(linear, left top, left bottom, from(#a3a8f0), to(#696fdd));
+  background: linear-gradient(#a3a8f0, #696fdd);
+  color: #fff;
+}
+
+main #card-2 .cost {
+  color: #fff;
+}
+
+main #card-2 .button-2 {
+  background: none;
+  background-color: #fff;
+  color: #6D72DE;
+}
+
+main #card-2 .button-2:hover {
+  background: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+.monthly {
+  display: none;
+}
+
+.annually {
+  display: block;
+}
+
 /**************
     FOOTER
 **************/
@@ -34,4 +201,20 @@ body {
 /**************
     @MEDIA
 **************/
+@media screen and (min-width: 1100px) {
+  main {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main #card-2 {
+    width: 350px;
+    height: 501px;
+    padding-top: 53px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
