--- a/style/style.scss
+++ b/style/style.scss
@@ -6,7 +6,7 @@ $text-size: 15px;
 $text-weight: 700;
 $gradient: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
 $veryLightBlue: #f7f7fe;
-$LightBlue: #d0d5f6;
+$lightBlue: #d0d5f6;
 $grayBlue: #6e728e;
 $darkBlue: #4a4d60;
 $blue: #6D72DE;
@@ -24,11 +24,149 @@ $blue: #6D72DE;
 body {
     font-family: $text-font;
     font-weight: $text-weight;
+    color: $grayBlue;
+    background-image: url(../images/bg-top.svg),
+                    url(../images/bg-bottom.svg);
+    background-repeat: no-repeat, no-repeat;
+    background-position: top right, bottom left;
+    background-color: $veryLightBlue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100vw;
+    min-height: 100vh;
+    padding: 64px 24px 24px 24px;
+}
+
+/**************
+    HEADER
+**************/
+header {
+    h1 {
+        font-size: 32px;
+        line-height: 39px;
+        margin-bottom: 40px;
+    }
+
+    .switch {
+        line-height: 28px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 80px;
+    }
 }
 
 /**************
     MAIN
 **************/
+
+main {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 24px;
+
+    .card {
+        background-color: #fff;
+        border-radius: 10px;
+        margin-bottom: 32px;
+        width: 327px;
+        height: 453px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 30px;
+        box-shadow: 1px 1px 10px $lightBlue;
+
+        h2 {
+            font-size: 18px;
+            line-height: 28px;
+            margin-bottom: 30px;
+        }
+
+        p {
+            border-bottom: 1px solid $lightBlue;
+            width: 100%;
+            text-align: center;
+            padding: 14px 0;
+        }
+
+        button {
+            margin-top: 30px;
+            padding: 15px;
+            width: 100%;
+            border: 1px solid #fff;
+            text-align: center;
+            text-transform: uppercase;
+            background: $gradient;
+            color: #fff;
+            font-size: 13px;
+            line-height: 16px;
+            letter-spacing: 1.39px;
+            font-weight: $text-weight;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: none;
+            color: $blue;
+            border-color: $blue;
+        }
+
+        .cost::before {
+            font-size: 40px;
+            content: "$";
+            position: relative;
+            top: -7px;
+            margin-right: 7px;
+        }
+
+        .cost {
+            color: $darkBlue;
+            font-size: 72px;
+            line-height: 71px;
+            letter-spacing: -2.16px;
+            padding-bottom: 35px;
+            padding-top: 0;
+        }
+
+
+    }
+
+    #card-2 {
+        background: $gradient;
+        color: #fff;
+
+        .cost {
+            color: #fff;
+        }
+
+        .button-2 {
+            background: none;
+            background-color: #fff;
+            color: $blue;
+        }
+
+        .button-2:hover {
+            background: transparent;
+            border-color: #fff;
+            color: #fff;
+        }
+    }
+}
+
+.monthly {
+    display: none;
+}
+
+
+.annually {
+    display: block;
+}
 
 /**************
     FOOTER
@@ -40,3 +178,16 @@ body {
 /**************
     @MEDIA
 **************/
+
+@media screen and (min-width: 1100px) {
+    main {
+        flex-direction: row;
+        align-items: center;
+
+        #card-2 {
+            width: 350px;
+            height: 501px;
+            padding-top: 53px;
+        }
+    }
+}
