--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,86 @@ header .switch {
   margin-bottom: 80px;
 }
 
+/***************
+    SLIDER
+***************/
+/* From w3schools.com */
+/* The switch - the box around the slider */
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 56px;
+  height: 32px;
+  margin: 0 24px;
+}
+
+/* Hide default HTML checkbox */
+.toggle input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(#a3a8f0), to(#696fdd));
+  background: linear-gradient(#a3a8f0, #696fdd);
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.slider:hover {
+  opacity: .5;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: 5px;
+  bottom: 4px;
+  background-color: #fff;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+input:checked + .slider {
+  background: -webkit-gradient(linear, left top, left bottom, from(#a3a8f0), to(#696fdd));
+  background: linear-gradient(#a3a8f0, #696fdd);
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+input:checked + .slider:hover {
+  opacity: .5;
+}
+
+input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #f7f7fe;
+          box-shadow: 0 0 1px #f7f7fe;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(23px);
+  transform: translateX(23px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 /**************
     MAIN
 **************/
