--- a/style/style.scss
+++ b/style/style.scss
@@ -59,6 +59,83 @@ header {
     }
 }
 
+/***************
+    SLIDER
+***************/
+
+/* From w3schools.com */
+
+/* The switch - the box around the slider */
+.toggle {
+    position: relative;
+    display: inline-block;
+    width: 56px;
+    height: 32px;
+    margin: 0 24px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .toggle input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: $gradient;
+    transition: .5s;
+
+    &:hover {
+        opacity: .5;
+    }
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 24px;
+    width: 24px;
+    left: 5px;
+    bottom: 4px;
+    background-color: #fff;
+    transition: .5s;
+  }
+  
+  input:checked + .slider {
+    background: $gradient;
+    transition: .5s;
+    &:hover {
+        opacity: .5;
+    }
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px $veryLightBlue;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(23px);
+    -ms-transform: translateX(23px);
+    transform: translateX(23px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
 /**************
     MAIN
 **************/
